WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181383
Caches::writeCachesToDisk should assert that it is initialized
https://bugs.webkit.org/show_bug.cgi?id=181383
Summary
Caches::writeCachesToDisk should assert that it is initialized
youenn fablet
Reported
2018-01-08 04:01:54 PST
Caches::writeCachesToDisk should assert that it is initialized
Attachments
Patch
(1.40 KB, patch)
2018-01-08 04:03 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-01-08 04:02:25 PST
Some crashes can be seen from bots in Caches::writeCachesToDisk and asserting m_isInitialized might help identifying the issue.
youenn fablet
Comment 2
2018-01-08 04:03:52 PST
Created
attachment 330679
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2018-01-08 05:23:30 PST
<
rdar://problem/36347748
>
WebKit Commit Bot
Comment 4
2018-01-08 12:47:51 PST
Comment on
attachment 330679
[details]
Patch Clearing flags on attachment: 330679 Committed
r226528
: <
https://trac.webkit.org/changeset/226528
>
WebKit Commit Bot
Comment 5
2018-01-08 12:47:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug