Caches::writeCachesToDisk should assert that it is initialized https://bugs.webkit.org/show_bug.cgi?id=181383

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-08
Reviewed by Alex Christensen.

Add assertion to ensure caches is initialized

* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::Caches::writeCachesToDisk):

Canonical link: https://commits.webkit.org/197237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226528 268f45cc-cd09-0410-ab3c-d52691b4dbfc